Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15986

regedit find fails for "ReportAs"

    XMLWordPrintable

Details

    Description

      Open regedit and select "Edit | Find" and in the "Find what:" box enter "ReportAs" and then click on "Find Next". This should be found as a part of "ReportAsWorkstation", but nothing will be found. Attached patch fixes this problem for me. But it breaks showing the message box "Finished searching through the registry." being shown. It just holds the last value shown without a Finished message box.

      Attachments

        1. Regedit_Find_Error01.png
          74 kB
          DougLyons
        2. Regedit_Find_Error02.png
          64 kB
          DougLyons
        3. Regedit_Find_OK.png
          80 kB
          DougLyons
        4. regedit_find_c.patch
          0.4 kB
          DougLyons
        5. Regedit_Log.txt
          56 kB
          DougLyons
        6. regedit_find_c.patch
          0.4 kB
          DougLyons
        7. image-2022-09-17-16-57-38-806.png
          23 kB
          KRosUser
        8. regedit_find_fix_01.patch
          8 kB
          DougLyons
        9. regedit_find_fix_02.patch
          8 kB
          DougLyons
        10. 15-5754_regedit_find_61.txt
          3 kB
          DougLyons
        11. regedit_find_bt4_out.txt
          2 kB
          DougLyons
        12. katahiromz-fPast.patch
          0.7 kB
          Katayama Hirofumi MZ
        13. regedit-find-min-fixes.patch
          0.8 kB
          DougLyons
        14. 20230401-0.4.15-dev-5900-g14cf589-FIXED.png
          20 kB
          Katayama Hirofumi MZ

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              DougLyons DougLyons
              Votes:
              6 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: